<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainActivityLayout">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="20dp"

            android:text="CS427 Project App" />


        <TextView
            android:id="@+id/welcomeNote"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/showUserName" />


        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="LOGOUT" />



        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List of Locations"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- recyclerview, used to create city list with button dynamically -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="430dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintBottom_toTopOf="@+id/buttonAddLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>




        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />

        <Button
                android:text="List Management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:id="@+id/listManagementButton"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>